# Voice-assistant

./: README.md
.github/workflows/: nextjs.yml
backend/: .gitignore  Spacefile  pyproject.toml  requirements.txt
backend/assistant/: assistant_controller.py  assistant_service.py
backend/transcoding/: transcoding_service.py
backend/utils/: file_utils.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/pages/components/VoiceAssistant/: VoiceAssistant.component.tsx  useVoiceAssistant.hook.ts
frontend/src/pages/components/VoiceAssistant/VoiceAssistantAvatar/: VoiceAssistantAvatar.component.tsx
frontend/src/pages/services/: aivoiceassistant.service.ts
frontend/src/styles/: VoiceAssistant.module.css
