[tool.poetry]
name = "code"
version = "0.1.0"
description = ""
authors = ["Vinods"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
openai = "^0.27.8"
langchain = "^0.0.202"
fastapi = "^0.97.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
boto3 = "^1.26.155"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

